# healerstale

./: CMakeLists.txt  README.md  copyright.md  main.cpp  makefile  story.txt
Debug/: gamsecomp20192
Release/: makefile
makefiles/: makefile  makefile-old
src/: Game.cpp  Game.h  Main.cpp  main-old.cpp
src/Engine/: Button.h  GUIElement.cpp  GUIElement.h  Scene.cpp  Scene.h  Structures.h  Window.cpp  Window.h
src/Scenes/: Credits.cpp  Credits.h  Gameplay.cpp  Gameplay.h  Menu.cpp  Menu.h  Sponsor.cpp  Sponsor.h
