cmake_minimum_required(VERSION 2.8)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

project(healerstale)
include("${VITASDK}/share/vita.cmake" REQUIRED)


set(VITA_APP_NAME "Healers Tale")
set(VITA_TITLEID  "LUNA00010")
set(VITA_VERSION  "01.00")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(
  common
  src
)

add_executable(${PROJECT_NAME}
  src/Main.cpp
  src/Engine/Window.cpp
  src/Engine/GUIElement.cpp
  src/Engine/Scene.cpp
  src/Scenes/Credits.cpp
  src/Scenes/Menu.cpp
  src/Scenes/Gameplay.cpp
  src/Scenes/Sponsor.cpp
)

target_link_libraries(${PROJECT_NAME}
  SDL2
  SDL2_image
  png
  jpeg
  z
  stdc++
  pthread
  vita2d
  SceDisplay_stub
  SceCtrl_stub
  SceAudio_stub
  SceSysmodule_stub
  SceGxm_stub
  SceCommonDialog_stub
  SceTouch_stub
  SceHid_stub
  m
)

vita_create_self(${PROJECT_NAME}.self ${PROJECT_NAME})
vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
  VERSION ${VITA_VERSION}
  NAME ${VITA_APP_NAME}
  FILE Assets/Sprites/UI/Sponsor.png Assets/Sprites/UI/Sponsor.png
  FILE sce_sys/icon0.png sce_sys/icon0.png
  FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
  FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
  FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
)
